--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lineage II Map</title>
     <style>
+      body {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        max-height: 100%;
+        overflow: hidden;
+      }
+
       .slidecontainer {
-        margin: 10px 0;
         width: 100%;
+        position: absolute;
+        bottom: 15px;
       }
 
       .slider {
         -webkit-appearance: none;
         width: 100%;
-        height: 15px;
-        border-radius: 5px;
+        height: 2px;
         background: #d3d3d3;
         outline: none;
         opacity: 0.7;
@@ -32,7 +40,7 @@
         width: 25px;
         height: 25px;
         border-radius: 50%;
-        background: #04aa6d;
+        background: #830c20;
         cursor: pointer;
       }
 
@@ -46,9 +54,14 @@
 
       #mapcontainer {
         position: relative;
-        width: 100%;
-        height: calc(100vh - 55px);
-        border: 1px solid #ccc;
+        width: 100vw;
+        height: 100vh;
+        padding: 0;
+        margin: 0;
+      }
+
+      #map {
+        width: 100vw;
       }
 
       .player {
@@ -83,26 +96,24 @@
     </style>
   </head>
   <body>
-    <div>
-      <div id="mapcontainer" class="mapcontainer">
-        <span id="pagetitle">
-          <h1>Lineage II Map v2</h1>
-          <h3>by Nick</h3>
-        </span>
-        <canvas id="map" alt="map" />
-      </div>
+    <div id="mapcontainer" class="mapcontainer">
+      <span id="pagetitle">
+        <h1>Lineage II Map v2</h1>
+        <h3>by Nick</h3>
+      </span>
       <div class="slidecontainer">
         <input type="range" min="1" max="100" value="25" step="0.2" class="slider" id="slider" />
       </div>
+      <canvas id="map" alt="map"></canvas>
     </div>
     <script>
-      let userX = -6000,
-        userY = 82800;
+      let userX = 83120,
+        userY = 148600;
 
       const BLOCKSIZE = 32768,
         BLOCKPX = 900;
 
-      const WorldToBlockNum = (n) => (n >= 0 ? n / BLOCKSIZE : n / BLOCKSIZE),
+      const WorldToBlockNum = (n) => n / BLOCKSIZE,
         WorldToPic = (n, zoom = 1) => {
           let mod = WorldToBlockNum(n) % 1;
           if (mod < 0) mod += 1;
