pinch zoom 2st version

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
               hypo = hypo1;
             }
             slider.value *= hypo1 / hypo;
+            redraw();
           }
         },
         false
