--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
         position: absolute;
         width: 5px;
         height: 5px;
+      }
+
+      .player.me {
         border: 2px solid red;
+      }
+
+      .player.npc {
+        border: 2px solid yellow;
       }
 
       #pagetitle {
@@ -101,10 +108,23 @@
         <input type="range" min="1" max="100" value="15" step="0.2" class="slider" id="slider" />
       </div>
       <canvas id="map" alt="map"></canvas>
+      <div id="player" class="player me"></div>
+      <div id="npc_layer"></div>
     </div>
     <script>
       let userX = 83120,
         userY = 148600;
+
+      /*
+      const npcList = [
+        { name: "Clarissa", title: "Gatekeeper", xpos: 83396, ypos: 147904 },
+        { name: "Lottery Ticket Seller", title: "", xpos: 83331, ypos: 147905 },
+        { name: "Adventure Guildsman", title: "", xpos: 82840, ypos: 147796 },
+        { name: "Priest of Dawn", title: "", xpos: 83369, ypos: 149273 },
+        { name: "Adventurers' Guide", title: "", xpos: 82839, ypos: 149377 },
+      ];*/
+
+      let npcList = [];
 
       const BLOCKSIZE = 32768,
         BLOCKPX = 900,
@@ -124,16 +144,13 @@
         container = document.getElementById("mapcontainer"),
         map = document.getElementById("map"),
         ctx = map.getContext("2d"),
-        player = document.createElement("div");
+        player = document.getElementById("player"),
+        npc_layer = document.getElementById("npc_layer");
       cachedTiles = new Array(BLOCKLIMITS.X.max + 1)
         .fill(undefined)
         .map(() => new Array(BLOCKLIMITS.Y.max + 1).fill(undefined));
 
       let zoom = 1;
-
-      // Draw player
-      player.className = "player";
-      container.appendChild(player);
 
       const redraw = () => {
         if (userX > BLOCKSIZE * (BLOCKLIMITS.X.max - BLOCKLIMITS.X.mid + 1)) {
@@ -152,7 +169,7 @@
           userY = BLOCKSIZE * (BLOCKLIMITS.Y.min - BLOCKLIMITS.Y.mid);
         }
 
-        console.log(userX, userY);
+        // console.log(userX, userY);
         // Clear canvas
         ctx.clearRect(0, 0, map.width, map.height);
 
@@ -217,9 +234,56 @@
             }
           }
         }
+
+        // Draw NPCs
+        const visibleCoords = {
+          top: userY - (halfHeight * (BLOCKSIZE / BLOCKPX)) / zoom,
+          left: userX - (halfWidth * (BLOCKSIZE / BLOCKPX)) / zoom,
+          right: userX + (halfWidth * (BLOCKSIZE / BLOCKPX)) / zoom,
+          bottom: userY + (halfHeight * (BLOCKSIZE / BLOCKPX)) / zoom,
+        };
+
+        npc_layer.innerHTML = ""; // clean-up the NPC layer
+        npcList.forEach((npc) => {
+          // we do not want to render NPC that are not visible on screen
+          if (
+            npc.xpos >= visibleCoords.left &&
+            npc.xpos <= visibleCoords.right &&
+            npc.ypos >= visibleCoords.top &&
+            npc.ypos <= visibleCoords.bottom
+          ) {
+            const npcOffsetX = ((userX - npc.xpos) / (BLOCKSIZE / BLOCKPX)) * zoom,
+              npcOffsetY = ((userY - npc.ypos) / (BLOCKSIZE / BLOCKPX)) * zoom;
+
+            const npcDom = document.createElement("div");
+            npcDom.className = "player npc";
+            npcDom.title = npc.name;
+            npc_layer.appendChild(npcDom);
+
+            npcDom.style.left = `${halfWidth - npcOffsetX - npcDom.style.width / 2}px`;
+            npcDom.style.top = `${halfHeight - npcOffsetY - npcDom.style.height / 2}px`;
+          }
+        });
       };
 
       window.onresize = window.onload = slider.oninput = redraw;
+
+      fetch("//npcs.json")
+        .then(function (response) {
+          if (response.status !== 200) {
+            console.log("Looks like there was a problem. Status Code: " + response.status);
+            return;
+          }
+
+          // Examine the text in the response
+          response.json().then(function (data) {
+            npcList = data;
+            redraw();
+          });
+        })
+        .catch(function (err) {
+          console.log("Fetch Error :-S", err);
+        });
 
       map.onclick = (e) => {
         zoom = (slider.value * 10) / slider.max;
