--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
       window.onresize = window.onload = slider.oninput = redraw;
 
-      fetch("//npcs.json")
+      fetch("./npcs.json")
         .then(function (response) {
           if (response.status !== 200) {
             console.log("Looks like there was a problem. Status Code: " + response.status);
