--- a/index.html
+++ b/index.html
@@ -113,18 +113,8 @@
     </div>
     <script>
       let userX = 83120,
-        userY = 148600;
-
-      /*
-      const npcList = [
-        { name: "Clarissa", title: "Gatekeeper", xpos: 83396, ypos: 147904 },
-        { name: "Lottery Ticket Seller", title: "", xpos: 83331, ypos: 147905 },
-        { name: "Adventure Guildsman", title: "", xpos: 82840, ypos: 147796 },
-        { name: "Priest of Dawn", title: "", xpos: 83369, ypos: 149273 },
-        { name: "Adventurers' Guide", title: "", xpos: 82839, ypos: 149377 },
-      ];*/
-
-      let npcList = [];
+        userY = 148600,
+        npcList = [];
 
       const BLOCKSIZE = 32768,
         BLOCKPX = 900,
