--- a/index.html
+++ b/index.html
@@ -215,12 +215,6 @@
       let zoom = 1;
 
       const redraw = () => {
-        Info.setState({
-          sw: window.screen.width,
-          sh: window.screen.height,
-          oo: Math.abs(window.orientation) - 90 == 0 ? "Landscape" : "Portrait",
-        });
-
         if (userX > BLOCKSIZE * (BLOCKLIMITS.X.max - BLOCKLIMITS.X.mid + 1)) {
           userX = BLOCKSIZE * (BLOCKLIMITS.X.max - BLOCKLIMITS.X.mid + 1);
         }
@@ -237,13 +231,19 @@
           userY = BLOCKSIZE * (BLOCKLIMITS.Y.min - BLOCKLIMITS.Y.mid);
         }
 
-        Info.setState({ ux: Math.round(userX), uy: Math.round(userY) });
+        Info.setState({
+          sw: window.screen.width,
+          sh: window.screen.height,
+          oo: Math.abs(window.orientation) - 90 == 0 ? "Landscape" : "Portrait",
+          ux: Math.round(userX),
+          uy: Math.round(userY),
+        });
 
         // Clear canvas
         ctx.clearRect(0, 0, map.width, map.height);
 
         zoom = (slider.value * 10) / slider.max;
-        Info.setState({ zoom: zoom.toPrecision(4) });
+
         const rect = container.getBoundingClientRect();
         map.width = rect.width;
         map.height = rect.height;
@@ -257,7 +257,7 @@
           tileX = Math.floor(WorldToBlockNum(userX)) + BLOCKLIMITS.X.mid,
           tileY = Math.floor(WorldToBlockNum(userY)) + BLOCKLIMITS.Y.mid;
 
-        Info.setState({ tx: tileX, ty: tileY });
+        Info.setState({ tx: tileX, ty: tileY, zoom: zoom.toPrecision(4) });
 
         // Position the player in the center
         player.style.top = `${halfHeight - player.style.width / 2}px`;
@@ -384,7 +384,7 @@
 
       function onContainerMouseWheel(event) {
         event = event ? event : window.event;
-        slider.value -= event.detail ? event.detail * -1 : event.wheelDelta / 10;
+        slider.value -= event.detail ? event.detail * -1 : event.wheelDelta / 100;
         redraw();
       }
 
